fix navbar bug on mobile

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -104,7 +104,7 @@ header.shrink {
   padding: 2rem 4rem;
   /*background: rgba(255,255,255,.5);*/
   display: block;
-  /*overflow: hidden;*/
+  overflow: hidden;
   margin: 0 auto;
 }
 
